# Verba-

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  codex-remote-test.txt  setup.sh  启动Verba.bat
.githooks/: pre-push
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
client/: README.md  pubspec.yaml  pubspec_bak.yaml
client/assets/icons/: README.md
client/lib/: main.dart
client/lib/models/: subtitle_entry.dart
client/lib/pages/: home_page.dart
client/lib/providers/: session_provider.dart
client/lib/services/: api_client.dart  tts_pcm_player.dart  tts_pcm_player_stub.dart  tts_pcm_player_windows.dart  tts_playback_buffer.dart  wasapi_capture.dart  (+2 more)
client/test/: api_client_test.dart  api_integration_test.dart  session_provider_test.dart  sse_payload_test.dart  subtitle_entry_test.dart  translation_correction_diff_test.dart  tts_playback_buffer_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/wasapi/: CMakeLists.txt  wasapi_capture.cpp  wasapi_capture.h
docs/: DESIGN.md  DOCUMENTATION_ARCHITECTURE.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  RELIABILITY.md  SECURITY.md  delivery-log.md  floating-window-design.md  requirement-review.md  test-coverage.md  产品需求.md  歌词浮动UI设计.md
docs/design-docs/: api-provider-selection.md  core-beliefs.md  correction-effect.md  floating-window-design.md  index.md  realtime-tts-playback.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md
docs/references/: index.md
server/: .env.example  go.mod  go.sum
(+52 files in other folders)
